force-app/main/default/objects/HDT_LogMappingRecord__mdt/HDT_LogMappingRecord__mdt.object-meta.xml
<CustomObject>
    <label>Log Mapping Record</label>
    <pluralLabel>Log Mapping Records</pluralLabel>
</CustomObject>