force-app/main/default/objects/HDT_LogMappingRecord__mdt/fields/RequestDate__c.field-meta.xml
<CustomField>
    <fullName>RequestDate__c</fullName>
    <label>RequestDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>